--- a/src/GSvar/GapDialog.ui
+++ b/src/GSvar/GapDialog.ui
@@ -85,6 +85,9 @@
           <property name="text">
            <string>reduce target region to exon/splicing region</string>
           </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
          </widget>
         </item>
         <item>
