--- a/src/GSvar/MainWindow.ui
+++ b/src/GSvar/MainWindow.ui
@@ -325,6 +325,9 @@
                <attribute name="verticalHeaderVisible">
                 <bool>true</bool>
                </attribute>
+               <attribute name="verticalHeaderCascadingSectionResizes">
+                <bool>false</bool>
+               </attribute>
               </widget>
              </item>
             </layout>
@@ -476,6 +479,8 @@
      <addaction name="actionPreferredTranscripts"/>
      <addaction name="actionEditSomaticGeneRoles"/>
      <addaction name="actionEditSomaticPathwayGeneAssociations"/>
+     <addaction name="separator"/>
+     <addaction name="actionBurdenTest"/>
     </widget>
     <widget class="QMenu" name="menuPhenotypes_2">
      <property name="title">
@@ -1483,9 +1488,13 @@
     <string>Prepare GHGA upload</string>
    </property>
   </action>
+  <action name="actionBurdenTest">
+  <property name="text">
+    <string>Gene-based burden test</string>
+   </property>
+  </action>
  </widget>
- <layoutdefault spacing="6" margin="11"/>
- <customwidgets>
+ <layoutdefault spacing="6" margin="11"/> <customwidgets>
   <customwidget>
    <class>VariantDetailsDockWidget</class>
    <extends>QWidget</extends>
