add sampling date to NGSD, the genlab import and sample search

--- a/src/GSvar/ProcessedSampleWidget.ui
+++ b/src/GSvar/ProcessedSampleWidget.ui
@@ -645,7 +645,7 @@
               </property>
              </widget>
             </item>
-            <item row="4" column="0">
+            <item row="5" column="0">
              <widget class="QLabel" name="label_9">
               <property name="toolTip">
                <string>Sample sender and date/person the sample was received (by).</string>
@@ -655,7 +655,7 @@
               </property>
              </widget>
             </item>
-            <item row="4" column="1">
+            <item row="5" column="1">
              <widget class="QLabel" name="sender">
               <property name="text">
                <string>TextLabel</string>
@@ -665,14 +665,14 @@
               </property>
              </widget>
             </item>
-            <item row="5" column="0">
+            <item row="6" column="0">
              <widget class="QLabel" name="label_12">
               <property name="text">
                <string>species / type:</string>
               </property>
              </widget>
             </item>
-            <item row="5" column="1">
+            <item row="6" column="1">
              <widget class="QLabel" name="species_type">
               <property name="text">
                <string>TextLabel</string>
@@ -682,14 +682,14 @@
               </property>
              </widget>
             </item>
-            <item row="6" column="0">
+            <item row="7" column="0">
              <widget class="QLabel" name="label_8">
               <property name="text">
                <string>tumor/ FFPE:</string>
               </property>
              </widget>
             </item>
-            <item row="6" column="1">
+            <item row="7" column="1">
              <widget class="QLabel" name="tumor_ffpe">
               <property name="text">
                <string>TextLabel</string>
@@ -699,14 +699,14 @@
               </property>
              </widget>
             </item>
-            <item row="7" column="0">
+            <item row="8" column="0">
              <widget class="QLabel" name="label_7">
               <property name="text">
                <string>gender:</string>
               </property>
              </widget>
             </item>
-            <item row="7" column="1">
+            <item row="8" column="1">
              <widget class="QLabel" name="gender">
               <property name="text">
                <string>TextLabel</string>
@@ -716,7 +716,7 @@
               </property>
              </widget>
             </item>
-            <item row="8" column="0">
+            <item row="9" column="0">
              <widget class="QLabel" name="label_11">
               <property name="toolTip">
                <string>Disease group and status.</string>
@@ -726,7 +726,7 @@
               </property>
              </widget>
             </item>
-            <item row="8" column="1">
+            <item row="9" column="1">
              <widget class="QLabel" name="disease_group_status">
               <property name="text">
                <string>TextLabel</string>
@@ -736,21 +736,21 @@
               </property>
              </widget>
             </item>
-            <item row="9" column="0">
+            <item row="10" column="0">
              <widget class="QLabel" name="label_15">
               <property name="text">
                <string>sample groups:</string>
               </property>
              </widget>
             </item>
-            <item row="9" column="1">
+            <item row="10" column="1">
              <widget class="QLabel" name="sample_groups">
               <property name="text">
                <string>TextLabel</string>
               </property>
              </widget>
             </item>
-            <item row="11" column="0">
+            <item row="12" column="0">
              <widget class="QLabel" name="label_2">
               <property name="text">
                <string>comments:</string>
@@ -760,7 +760,7 @@
               </property>
              </widget>
             </item>
-            <item row="11" column="1">
+            <item row="12" column="1">
              <widget class="QLabel" name="comments_sample">
               <property name="text">
                <string>TextLabel</string>
@@ -770,14 +770,14 @@
               </property>
              </widget>
             </item>
-            <item row="10" column="1">
+            <item row="11" column="1">
              <widget class="QLabel" name="tissue">
               <property name="text">
                <string>TextLabel</string>
               </property>
              </widget>
             </item>
-            <item row="10" column="0">
+            <item row="11" column="0">
              <widget class="QLabel" name="label_29">
               <property name="text">
                <string>tissue:</string>
@@ -810,6 +810,20 @@
             </item>
             <item row="3" column="1">
              <widget class="QLabel" name="year_ob_birth">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0">
+             <widget class="QLabel" name="label_31">
+              <property name="text">
+               <string>sampling date</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="1">
+             <widget class="QLabel" name="sampling_date">
               <property name="text">
                <string>TextLabel</string>
               </property>
