--- a/src/GSvar/MaintenanceDialog.ui
+++ b/src/GSvar/MaintenanceDialog.ui
@@ -96,6 +96,11 @@
          <string>Import year of birth</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Import tissue</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item>
