--- a/src/GSvar/BurdenTestWidget.ui
+++ b/src/GSvar/BurdenTestWidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>846</width>
+    <width>931</width>
     <height>800</height>
    </rect>
   </property>
@@ -34,6 +34,13 @@
      <property name="spacing">
       <number>3</number>
      </property>
+     <item>
+      <widget class="QPushButton" name="b_check_input">
+       <property name="text">
+        <string>check input</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <widget class="QPushButton" name="b_burden_test">
        <property name="text">
@@ -476,15 +483,15 @@
       <property name="spacing">
        <number>3</number>
       </property>
-      <item row="2" column="1">
-       <widget class="QLabel" name="l_controls">
+      <item row="5" column="3">
+       <widget class="QPushButton" name="b_clear_excluded_regions">
         <property name="text">
-         <string>0 samples</string>
+         <string>clear regions</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="label_3">
+      <item row="0" column="1">
+       <widget class="QLabel" name="l_cases">
         <property name="font">
          <font>
           <weight>50</weight>
@@ -492,50 +499,27 @@
          </font>
         </property>
         <property name="text">
-         <string>Gene set:</string>
+         <string>0 samples</string>
+        </property>
+        <property name="textFormat">
+         <enum>Qt::AutoText</enum>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
-      <item row="2" column="2">
-       <widget class="QPushButton" name="b_load_samples_controls">
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_8">
         <property name="text">
-         <string>load Samples</string>
+         <string>Excluded regions:</string>
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
-       <spacer name="verticalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::MinimumExpanding</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="4" column="2">
-       <widget class="QPushButton" name="b_load_genes">
+      <item row="2" column="1">
+       <widget class="QLabel" name="l_controls">
         <property name="text">
-         <string>load genes</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QPushButton" name="b_load_samples_cases">
-        <property name="minimumSize">
-         <size>
-          <width>100</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>load Samples</string>
+         <string>0 samples</string>
         </property>
        </widget>
       </item>
@@ -565,36 +549,10 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QLabel" name="l_cases">
-        <property name="font">
-         <font>
-          <weight>50</weight>
-          <bold>false</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string>0 samples</string>
-        </property>
-        <property name="textFormat">
-         <enum>Qt::AutoText</enum>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
       <item row="4" column="1">
        <widget class="QLabel" name="l_gene_count">
         <property name="text">
          <string>0 genes</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="label_8">
-        <property name="text">
-         <string>Excluded regions:</string>
         </property>
        </widget>
       </item>
@@ -606,9 +564,81 @@
        </widget>
       </item>
       <item row="5" column="2">
-       <widget class="QPushButton" name="b_load_excluded_regions">
+       <widget class="QPushButton" name="b_add_excluded_regions">
         <property name="text">
-         <string>load regions</string>
+         <string>add regions</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0">
+       <spacer name="verticalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::MinimumExpanding</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="4" column="2" colspan="2">
+       <widget class="QPushButton" name="b_load_genes">
+        <property name="text">
+         <string>load genes</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2" colspan="2">
+       <widget class="QPushButton" name="b_load_samples_controls">
+        <property name="text">
+         <string>load Samples</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2" colspan="2">
+       <widget class="QPushButton" name="b_load_samples_cases">
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>load Samples</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="font">
+         <font>
+          <weight>50</weight>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Gene set:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0" colspan="2">
+       <widget class="QLabel" name="l_docu_link">
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://github.com/imgag/ngs-bits/blob/master/doc/GSvar/burden_test.md&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#007af4;&quot;&gt;Selecting samples for Burden test&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="textFormat">
+         <enum>Qt::RichText</enum>
+        </property>
+        <property name="openExternalLinks">
+         <bool>true</bool>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::TextBrowserInteraction</set>
         </property>
        </widget>
       </item>
