--- a/src/GSvar/ProcessedSampleWidget.ui
+++ b/src/GSvar/ProcessedSampleWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>950</width>
-    <height>1020</height>
+    <height>1096</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -371,13 +371,6 @@
               </property>
              </widget>
             </item>
-            <item row="6" column="0">
-             <widget class="QLabel" name="label_25">
-              <property name="text">
-               <string>operator:</string>
-              </property>
-             </widget>
-            </item>
             <item row="6" column="1">
              <widget class="QLabel" name="lab_operator">
               <property name="text">
@@ -388,7 +381,7 @@
               </property>
              </widget>
             </item>
-            <item row="7" column="0">
+            <item row="9" column="0">
              <widget class="QLabel" name="label_22">
               <property name="toolTip">
                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Information about processed samples that were merged analyzed jointly.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -398,7 +391,7 @@
               </property>
              </widget>
             </item>
-            <item row="7" column="1">
+            <item row="9" column="1">
              <widget class="QLabel" name="merged">
               <property name="text">
                <string>TextLabel</string>
@@ -408,7 +401,7 @@
               </property>
              </widget>
             </item>
-            <item row="8" column="0">
+            <item row="10" column="0">
              <widget class="QLabel" name="label_24">
               <property name="toolTip">
                <string>Normal sample associated to a tumor sample for pair analysis.</string>
@@ -418,7 +411,7 @@
               </property>
              </widget>
             </item>
-            <item row="8" column="1">
+            <item row="10" column="1">
              <widget class="QLabel" name="normal_sample">
               <property name="text">
                <string>TextLabel</string>
@@ -428,7 +421,24 @@
               </property>
              </widget>
             </item>
-            <item row="10" column="0">
+            <item row="11" column="0">
+             <widget class="QLabel" name="label_16">
+              <property name="toolTip">
+               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Ancestry estimated from variant data using the ngs-bits SampleAncestry tool.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              </property>
+              <property name="text">
+               <string>ancestry:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="11" column="1">
+             <widget class="QLabel" name="ancestry">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
+            <item row="12" column="0">
              <widget class="QLabel" name="label_10">
               <property name="text">
                <string>comments:</string>
@@ -438,7 +448,7 @@
               </property>
              </widget>
             </item>
-            <item row="10" column="1">
+            <item row="12" column="1">
              <widget class="QLabel" name="comments_processed_sample">
               <property name="minimumSize">
                <size>
@@ -457,18 +467,36 @@
               </property>
              </widget>
             </item>
-            <item row="9" column="0">
-             <widget class="QLabel" name="label_16">
-              <property name="toolTip">
-               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Ancestry estimated from variant data using the ngs-bits SampleAncestry tool.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-              </property>
+            <item row="6" column="0">
+             <widget class="QLabel" name="label_25">
               <property name="text">
-               <string>ancestry:</string>
+               <string>operator:</string>
               </property>
              </widget>
             </item>
-            <item row="9" column="1">
-             <widget class="QLabel" name="ancestry">
+            <item row="7" column="0">
+             <widget class="QLabel" name="label_33">
+              <property name="text">
+               <string>processing modus:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="8" column="0">
+             <widget class="QLabel" name="label_34">
+              <property name="text">
+               <string>batch number:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="1">
+             <widget class="QLabel" name="processing_modus">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
+            <item row="8" column="1">
+             <widget class="QLabel" name="batch_number">
               <property name="text">
                <string>TextLabel</string>
               </property>
